--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
     <li>DELETE /authors/&ltAUTHORID&gt - delete author by author ID</li>
 </ul>
 
-<p>Please refer 'requests.rest' file in the repository to make POST and PUT requests</p>
+<p>Please refer 'requests.rest' file in the repository to make requests</p>
